Issue #21925: PyImport_Cleanup(): Remove unused parameter in PySys_FormatStderr() call